--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-comments/01-molecules-02-drupal-comments.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-comments/01-molecules-02-drupal-comments.html
@@ -56,30 +56,33 @@
     </div>
 <section class="comments" id="comments">
   <h2 class="comments__title">Discuss</h2>
-  <form class="comment-form ds-reset">
-    <div class="form-item form-item--item">
-      <label class="form-item__label">
-        Your name 
-      </label>
-      <a class="username" title="View user profile." href="/users/admin">admin</a>
+  <form accept-charset="UTF-8" class="comment-form ds-reset">
+    <div class="form-item form-type-item">
+      <label>Your name </label>
+      <a class="username" href="/users/admin">admin</a>
     </div>
     <div class="field-type-text-long field-name-comment-body field-widget-text-textarea">
       <div>
         <div class="text-format-wrapper">
-          <div class="form-item form-item--textarea form-item--comment-body-und-0-value is-required">
-            <label class="form-item__label">Comment <span class="form-item__required-marker"><span class="element-invisible">This field is required.</span></span></label>
+          <div class="form-item form-type-textarea">
+            <label class="fel-field-label">Comment 
+              <span class="form-item__required-marker">
+                <span class="element-invisible">This field is required.</span>
+              </span>
+            </label>
             <textarea rows="5" cols="60" class="text-full form-textarea is-required"></textarea>
           </div>
-          <fieldset class="filter-wrapper fieldset">
-            <div class="fieldset__content">
+          <fieldset class="filter-wrapper form-wrapper">
+            <div class="fieldset-wrapper">
               <div class="filter-help">
-                <p><a target="_blank" href="/filter/tips">More information about text formats</a></p>
+                <p>
+                  <a target="_blank" href="/filter/tips">More information about text formats</a>
+                </p>
               </div>
               <div class="filter-guidelines filter-guidelines-processed">
                 <div class="filter-guidelines-item filter-guidelines-comments_filtered">
-                  <ul class="tips">
-                    <li>Allowed HTML tags: &lt;a&gt; &lt;em&gt; &lt;strong&gt; &lt;cite&gt; &lt;blockquote&gt; &lt;code&gt; &lt;ul&gt; &lt;ol&gt; &lt;li&gt; &lt;dl&gt; &lt;dt&gt; &lt;dd&gt;</li><li>Lines and paragraphs break automatically.</li><li>Web page addresses and e-mail addresses turn into links automatically.</li>
-                  </ul>
+                  <h3 style="display: none;">Comments Filtered</h3>
+                  <ul class="tips"><li>Allowed HTML tags: &lt;a&gt; &lt;em&gt; &lt;strong&gt; &lt;cite&gt; &lt;blockquote&gt; &lt;code&gt; &lt;ul&gt; &lt;ol&gt; &lt;li&gt; &lt;dl&gt; &lt;dt&gt; &lt;dd&gt;</li><li>Lines and paragraphs break automatically.</li><li>Web page addresses and e-mail addresses turn into links automatically.</li></ul>
                 </div>
               </div>
             </div>
@@ -90,7 +93,7 @@
     <div class="form-actions">
       <input type="submit" class="button button--submit" value="Comment">
     </div>
-  </form>    
+  </form>
   <div class="layout-slat comment comment--by-node-author view-mode-full">
     <div class="layout-slat__media">
       <span>
