fix for highlights card and initial event card styling

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation-04-pager/01-molecules-03-navigation-04-pager.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation-04-pager/01-molecules-03-navigation-04-pager.html
@@ -79,7 +79,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "molecules-pager";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"templates-landing-page","lineagePath":"..\/..\/patterns\/03-templates-_landing-page\/03-templates-_landing-page.html","lineageState":"inprogress"},{"lineagePattern":"templates-discussion-landing","lineagePath":"..\/..\/patterns\/03-templates-discussion-landing\/03-templates-discussion-landing.html","lineageState":"inprogress"},{"lineagePattern":"templates-innovation-landing","lineagePath":"..\/..\/patterns\/03-templates-innovation-landing\/03-templates-innovation-landing.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"templates-landing-page","lineagePath":"..\/..\/patterns\/03-templates-_landing-page\/03-templates-_landing-page.html","lineageState":"inprogress"},{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"},{"lineagePattern":"templates-discussion-landing","lineagePath":"..\/..\/patterns\/03-templates-discussion-landing\/03-templates-discussion-landing.html","lineageState":"inprogress"},{"lineagePattern":"templates-innovation-landing","lineagePath":"..\/..\/patterns\/03-templates-innovation-landing\/03-templates-innovation-landing.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
