--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -132,6 +132,46 @@
 							</div>
 						</div>
 					</div>
+					<div id="organisms-event-teaser" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html" class="patternLink" data-patternpartial="organisms-event-teaser">Event Teaser</a></h2>
+						<div class="sg-pattern-body">
+							<article class="card">
+  <div class="card__content">
+    <h2 class="card__date">September 21</h2>
+    <h3 class="card__title"><a href="#">Title</a></h3>
+    <div class="card__meta">
+      <div class="card__list">
+        <div class="card__list-label">Location:</div> United States
+      </div>
+      <div class="card__list">
+        <div class="card__list-label">Topic:</div> Agriculture
+      </div>
+    </div>
+  </div>
+</article>
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;article class=&quot;card&quot;&gt;
+  &lt;div class=&quot;card__content&quot;&gt;
+    &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
+    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Title&lt;/a&gt;&lt;/h3&gt;
+    &lt;div class=&quot;card__meta&quot;&gt;
+      &lt;div class=&quot;card__list&quot;&gt;
+        &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
+      &lt;/div&gt;
+      &lt;div class=&quot;card__list&quot;&gt;
+        &lt;div class=&quot;card__list-label&quot;&gt;Topic:&lt;/div&gt; Agriculture
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/article&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 					<div id="organisms-funding-op-teaser" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html" class="patternLink" data-patternpartial="organisms-funding-op-teaser">Funding Op Teaser</a></h2>
 						<div class="sg-pattern-body">
