--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-filters/01-molecules-04-panes-filters.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-filters/01-molecules-04-panes-filters.html
@@ -107,7 +107,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "molecules-filters";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"templates-discussion-landing","lineagePath":"..\/..\/patterns\/03-templates-discussion-landing\/03-templates-discussion-landing.html","lineageState":"inprogress"},{"lineagePattern":"templates-innovation-landing","lineagePath":"..\/..\/patterns\/03-templates-innovation-landing\/03-templates-innovation-landing.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"},{"lineagePattern":"templates-discussion-landing","lineagePath":"..\/..\/patterns\/03-templates-discussion-landing\/03-templates-discussion-landing.html","lineageState":"inprogress"},{"lineagePattern":"templates-innovation-landing","lineagePath":"..\/..\/patterns\/03-templates-innovation-landing\/03-templates-innovation-landing.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
