--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-event-teaser/02-organisms-02-view-modes-event-teaser.html
@@ -56,42 +56,25 @@
     </div>
 <article class="card">
   <div class="card__content">
-    <h3 class="card__primary-title"><a href="#">Title</a></h3>
-    <div class="card__number">$30,000,000</div>
-    <div class="card__due-date">Due by: 3/21/2015</div> 
-    <div class="card__list">
-      <div class="card__list-label">Eligibility:</div> Lorem ipsum sit amet, cons ectetur adipiscing elit.
-    </div>
-    <div class="card__list">
-      <div class="card__list-label">Level of Effort:</div> Lorem ipsum
-    </div>
-    <div class="card__list">
-      <div class="card__list-label">Topics:</div> <a href="#">Agriculture</a>, <a href="#">Irrigation</a>
-    </div>
-    <div class="card__counts">
-      <div class="view">
-        <div class="has-icon--comment" title="Comments">12</div>
+    <h2 class="card__date">September 21</h2>
+    <h3 class="card__title"><a href="#">Title</a></h3>
+    <div class="card__meta">
+      <div class="card__list">
+        <div class="card__list-label">Location:</div> United States
       </div>
-      <div class="view">
-        <div class="has-icon--favorite" title="Favorites">6</div>
+      <div class="card__list">
+        <div class="card__list-label">Topic:</div> Agriculture
       </div>
     </div>
   </div>
 </article>
-
-
-
- 
- 
- 
-
     <!--DO NOT REMOVE-->
     	
 	<script>
 		// handle injection of items from PHP
-		var patternPartial = "organisms-funding-op-teaser";
+		var patternPartial = "organisms-event-teaser";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"molecules-homepage-views-funding-pane","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-_homepage-views-funding-pane\/01-molecules-04-panes-_homepage-views-funding-pane.html","lineageState":"inprogress"},{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
