--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-highlight-teaser/02-organisms-02-view-modes-highlight-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-highlight-teaser/02-organisms-02-view-modes-highlight-teaser.html
@@ -73,7 +73,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "organisms-highlight-teaser";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-community-detail","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-community-detail\/02-organisms-01-content-types-community-detail.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"organisms-community-detail","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-community-detail\/02-organisms-01-content-types-community-detail.html","lineageState":"inprogress"},{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
