--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-organization-teaser/02-organisms-02-view-modes-organization-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-organization-teaser/02-organisms-02-view-modes-organization-teaser.html
@@ -82,7 +82,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "organisms-organization-teaser";
 		var lineage        = [{"lineagePattern":"atoms-card-image","lineagePath":"..\/..\/patterns\/00-atoms-04-images-04-card-image\/00-atoms-04-images-04-card-image.html","lineageState":"inprogress"}];
-		var lineageR       = [{"lineagePattern":"templates-innovation-landing","lineagePath":"..\/..\/patterns\/03-templates-innovation-landing\/03-templates-innovation-landing.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
