--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.escaped.html
@@ -498,7 +498,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__meta&quot;&gt;
                       &lt;div class=&quot;card__list&quot;&gt;
                         &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
@@ -528,7 +528,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__meta&quot;&gt;
                       &lt;div class=&quot;card__list&quot;&gt;
                         &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
@@ -546,12 +546,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/transport/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://veggieipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/food/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -604,12 +604,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/people/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/transport/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -638,7 +638,7 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -666,7 +666,7 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -684,7 +684,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -744,7 +744,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -777,12 +777,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/transport/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://veggieipsum.com&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/food/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;12&lt;/div&gt;
@@ -823,12 +823,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/people/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/transport/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;12&lt;/div&gt;
@@ -850,7 +850,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
                     &lt;div class=&quot;card__due-date&quot;&gt;Due by: 3/21/2015&lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
@@ -914,7 +914,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
                     &lt;div class=&quot;card__due-date&quot;&gt;Due by: 3/21/2015&lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
