minor tweaks to mobile nav

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-card-types/04-pages-card-types.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-card-types/04-pages-card-types.escaped.html
@@ -513,7 +513,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__meta&quot;&gt;
                       &lt;div class=&quot;card__list&quot;&gt;
                         &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
@@ -528,7 +528,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__date&quot;&gt;September 21&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__meta&quot;&gt;
                       &lt;div class=&quot;card__list&quot;&gt;
                         &lt;div class=&quot;card__list-label&quot;&gt;Location:&lt;/div&gt; United States
@@ -546,7 +546,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/business/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
@@ -575,12 +575,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/1/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -604,11 +604,11 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/business/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div&gt;&lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
@@ -652,7 +652,7 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -666,7 +666,7 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -714,7 +714,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -744,7 +744,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -777,7 +777,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/business/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
@@ -800,12 +800,12 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/1/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.&lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;12&lt;/div&gt;
@@ -823,11 +823,11 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/business/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/2/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div&gt;&lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
@@ -882,7 +882,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
                     &lt;div class=&quot;card__due-date&quot;&gt;Due by: 3/21/2015&lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
@@ -914,7 +914,7 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
                     &lt;div class=&quot;card__due-date&quot;&gt;Due by: 3/21/2015&lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
