--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-card-types/04-pages-card-types.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-card-types/04-pages-card-types.html
@@ -569,7 +569,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__date">September 21</h2>
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
                     <div class="card__meta">
                       <div class="card__list">
                         <div class="card__list-label">Location:</div> United States
@@ -584,7 +584,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__date">September 21</h2>
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__meta">
                       <div class="card__list">
                         <div class="card__list-label">Location:</div> United States
@@ -602,7 +602,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/business/2/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
@@ -631,12 +631,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/animals/2/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/1/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
-                    <div><p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p></div>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -660,11 +660,11 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/2/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div><p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p></div>
                     <div class="card__counts">
                       <div class="view">
@@ -708,7 +708,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -722,7 +722,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -770,7 +770,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -800,7 +800,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -833,7 +833,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/business/2/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
@@ -856,12 +856,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/animals/2/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/1/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
-                    <div><p>Pellentesque dapibus, est sed sollicitudin tincidunt, orci leo ornare dui, tempor euismod dolor elit quis quam. Etiam eu ex ut felis suscipit scelerisque.</p></div>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--innovation" title="Innovations">12</div>
@@ -879,11 +879,11 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/2/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div><p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p></div>
                     <div class="card__counts">
                       <div class="view">
@@ -938,7 +938,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
@@ -970,7 +970,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
