--- a/public/sites/all/themes/gesso/patternlab/public/styleguide/html/styleguide.html
+++ b/public/sites/all/themes/gesso/patternlab/public/styleguide/html/styleguide.html
@@ -6225,62 +6225,6 @@ p q r s t u v w x y z { | } ~
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
                     <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
@@ -6323,7 +6267,63 @@ p q r s t u v w x y z { | } ~
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -6474,62 +6474,6 @@ p q r s t u v w x y z { | } ~
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
                     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://hipsteripsum.me/&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
@@ -6572,7 +6516,63 @@ p q r s t u v w x y z { | } ~
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://web20ipsum.com&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://veggieipsum.com&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://lorizzle.nl/&quot;&gt;Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
