changed out org icon on innovation cards

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes/index.html
@@ -350,7 +350,7 @@
         <div class="has-icon--comment" title="Comments">12</div>
       </div>
       <div class="view">
-        <div class="has-icon--organization" title="Organizations">5</div>
+        <div class="has-icon--funding" title="Funding">5</div>
       </div>
       <div class="view">
         <div class="has-icon--favorite" title="Favorites">6</div>
@@ -386,7 +386,7 @@
         &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
+        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;5&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
         &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
