--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-innovation-teaser/02-organisms-02-view-modes-innovation-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-innovation-teaser/02-organisms-02-view-modes-innovation-teaser.html
@@ -70,7 +70,7 @@
         <div class="has-icon--comment" title="Comments">12</div>
       </div>
       <div class="view">
-        <div class="has-icon--organization" title="Organizations">5</div>
+        <div class="has-icon--funding" title="Funding">5</div>
       </div>
       <div class="view">
         <div class="has-icon--favorite" title="Favorites">6</div>
