--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-community-detail/04-pages-community-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-community-detail/04-pages-community-detail.escaped.html
@@ -467,20 +467,6 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;                  &lt;/div&gt;
-                  &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
                     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
@@ -509,7 +495,21 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Longer Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;03/15/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;                  &lt;/div&gt;
+                  &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
@@ -530,11 +530,11 @@
                   &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/1/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/1/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
@@ -544,7 +544,7 @@
                         &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;5&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
@@ -573,7 +573,7 @@
                         &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;5&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
@@ -588,12 +588,12 @@
                   &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/city/1/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://forumone.com/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.&lt;/p&gt;&lt;/div&gt;
+                    &lt;div&gt;&lt;p&gt;Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
@@ -602,7 +602,7 @@
                         &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;5&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
                         &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
@@ -629,7 +629,7 @@
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buffy-35-35.jpg&quot;&gt;&lt;/div&gt;
                       &lt;div class=&quot;card__author-name&quot;&gt;Buffy Summers&lt;/div&gt;
@@ -729,7 +729,7 @@
                   &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;Card Title&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://forumone.com/&quot;&gt;A Really, Really Much Much Longer Card Title&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__number&quot;&gt;$30,000,000&lt;/div&gt;
                     &lt;div class=&quot;card__due-date&quot;&gt;Due by: 3/21/2015&lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
